'scale' Node doesn't work properly #36926

Closed
opened 2013-10-03 11:13:55 +02:00 by nils martel · 6 comments

%%%--- Operating System, Graphics card ---
OSX mountain lion, [i have no plan]
Alternative:
Windows 7 Professional, nvidia geforce gtx ti 550
- Blender version with error, and version that worked ---
2.69 and it seems previous versions do also have this bug

- Short description of error ---

The Scale node doesn't work if you set it on 'render size' after putting it behind another scale node

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

go to compositor
use nodes
add scale node
set scale node to something <0
add scale node, set it to render size
it woun't work%%%

%%%--- Operating System, Graphics card --- OSX mountain lion, [i have no plan] Alternative: Windows 7 Professional, nvidia geforce gtx ti 550 - Blender version with error, and version that worked --- 2.69 and it seems previous versions do also have this bug - Short description of error --- The Scale node doesn't work if you set it on 'render size' after putting it behind another scale node - Steps for others to reproduce the error (preferably based on attached .blend file) --- >go to compositor >use nodes >add scale node >set scale node to something <0 >add scale node, set it to render size >it woun't work%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%What exactly mans "it wouldn't work" ? From what i could see here it actually all works as intended.%%%

%%%What exactly mans "it wouldn't work" ? From what i could see here it actually all works as intended.%%%

%%%This is not actually a bug, Scene/Render modes are just “absolute”, they do not use X/Y scale factors, so hidden them for those cases in r60545.

Apart from that, everything works as expected: as the first scale node outputs a picture which is already of the render size, the second one just does strictly nothing!%%%

%%%This is not actually a bug, Scene/Render modes are just “absolute”, they do not use X/Y scale factors, so hidden them for those cases in r60545. Apart from that, everything works as expected: as the first scale node outputs a picture which is already of the render size, the second one just does strictly nothing!%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @JoshFaulkner

Added subscriber: @JoshFaulkner

Not sure if commenting on a "Resolved" issue is frowned upon, if so, I'm very sorry. I was just wondering if the issue still exists in 2.76b yet was not fully sussed out in the provided example. I am having issues with two Scale nodes connected in series where I'd expect the Absolute option to convert my image to an absolute pixel value. It appears that the "Absolute" scaling option is completely dependent on the input image, and it's output seems intrinsically linked to the scene's render Resolution. See these node setups:

http:*www.pasteall.org/pic/95307
This image will render a full grumpy cat just like the input image at 4000x3000.

http:*www.pasteall.org/pic/95308
This image will render a "canvas" at 4000x3000 with an 800x100 grumpy cat in the middle.

Is this operating as expected? I performed a test on 2.63a, and the Absolute option did not seem constrained to the Render size.

Not sure if commenting on a "Resolved" issue is frowned upon, if so, I'm very sorry. I was just wondering if the issue still exists in 2.76b yet was not fully sussed out in the provided example. I am having issues with two Scale nodes connected in series where I'd expect the Absolute option to convert my image to an absolute pixel value. It appears that the "Absolute" scaling option is completely dependent on the input image, and it's output seems intrinsically linked to the scene's render Resolution. See these node setups: [http:*www.pasteall.org/pic/95307 ](http:*www.pasteall.org/pic/95307) This image will render a full grumpy cat just like the input image at 4000x3000. [http:*www.pasteall.org/pic/95308 ](http:*www.pasteall.org/pic/95308) This image will render a "canvas" at 4000x3000 with an 800x100 grumpy cat in the middle. Is this operating as expected? I performed a test on 2.63a, and the Absolute option did not seem constrained to the Render size.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36926
No description provided.