Fix related to [#36926] 'scale' Node doesn't work properly.

Scene/Render "spaces" are actually absolute values, they do not use the input X/Y scale factors, hide them in this case.

Thanks to Lukas for review and improvement!